--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Color Pallete */
+
 :root {
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
@@ -5,6 +7,8 @@
   --color-headings: #1b0760;
   --color-body: #918ca4;
 }
+
+/* Typography */
 
 html {
   font-size: 62.5%;
@@ -54,5 +58,34 @@ p {
   }
   h3 {
     font-size: 2.4rem;
+  }
+}
+
+/* Links */
+
+a {
+  text-decoration: none;
+}
+
+.link-arrow {
+  color: var(--color-accent);
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.link-arrow::after {
+  content: "-->";
+  margin-left: 5px;
+  transition: margin 0.15s;
+}
+
+.link-arrow:hover::after {
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .link-arrow {
+    font-size: 1.5rem;
   }
 }
