--- a/css/styles.css
+++ b/css/styles.css
@@ -123,3 +123,32 @@ a {
     font-size: 1.2rem;
   }
 }
+
+/* lists styling*/
+
+.list {
+  padding-left: 0;
+  color: var(--color-headings);
+  list-style: none;
+}
+
+.list--inline .list__item {
+  display: inline;
+  margin-right: 2rem;
+}
+
+.list--tick {
+  list-style-image: url(../icons/tick.svg);
+  padding-left: 3rem;
+}
+
+.list--tick .list__item {
+  padding-left: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .list--tick .list__item {
+    padding-left: 0;
+  }
+}
