10. Added styling for Plan and popular badge

--- a/components/list.html
+++ b/components/list.html
@@ -1,5 +1,6 @@
 <ul class="list list--tick">
-    <li class="list__item">List 1</li>
-    <li class="list__item">List 2</li>
-    <li class="list__item">List 3</li>
+    <li class="list__item">Unlimited Websites</li>
+    <li class="list__item">Unlimited Bandwidth</li>
+    <li class="list__item">100 GB SSD Storage</li>
+    <li class="list__item">3 GB Ram</li>
 </ul>
