13. Added structure for Grids and it's styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -437,3 +437,20 @@ a {
     font-size: 1.6rem;
   }
 }
+
+/* Grid */
+
+.grid {
+  display: grid;
+}
+@media screen and (min-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
