--- a/css/styles.css
+++ b/css/styles.css
@@ -170,8 +170,16 @@ a {
   width: 40px;
 }
 
+.icon--small {
+  width: 30px;
+}
+
 .icon--primary {
   fill: var(--color-primary);
+}
+
+.icon--white {
+  fill: #fff;
 }
 
 .icon-container {
@@ -182,6 +190,10 @@ a {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+}
+
+.icon-container--accent {
+  background: var(--color-accent);
 }
 
 /* Button */
@@ -449,8 +461,34 @@ a {
   }
 }
 
-@media screen and (min-width: 1024px) {
-  .grid {
-    grid-template-columns: repeat(3, 1fr);
+/* Testimonial */
+
+.testimonial {
+  padding: 3rem;
+}
+
+.testimonial__image {
+  position: relative;
+}
+
+.testimonial__image > img {
+  width: 100%;
+  border-radius: 30px;
+}
+
+.testimonial__image > .icon-container {
+  position: absolute;
+  top: 2rem;
+  right: -32px;
+}
+
+@media screen and (min-width: 768px) {
+  .testimonial .quote,
+  .testimonial .quote__author {
+    font-size: 2.4rem;
+  }
+
+  .testimonial .quote {
+    margin-left: 6rem;
   }
 }
